2001-07-26  Patrick Burke  <takhisisii@yahoo.com.au>

	* usecode/siintrinsics.h: lacked UNKNOWN opcode definitions for
	0xf7...0xff causing eldritch errors in ucxt.

	* usecode/ucxt/Docs/opcodes.txt: updated to note AIDX change.

2001-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Approach_avatar() only waits at most 1/10
	sec. now, just enough time for NPC to step to edge of screen.

	* objs/contain.cc (Container_game_object): find_item() checks
	quality.  This fixes the disappearing key bug.

2001-07-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: fixed AIDX opcode (keyring works again)

2001-07-26  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*.[cc|h]: integration with exult .xml config file;
	proto-integration with opcodes.txt data file; replaced all legacy
	FILE* with C++ iostreams.
	* usecode/ucxt/Docs/opcodes.txt: corrections and additions.

2001-07-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/*.cc: wrapped gdkx.h header in #ifdef XWIN/#endif

2001-07-25  Jeff Freedman  <jeff@amy.nerble.net>

	* npcnear.cc: Don't execute 'nearby' usecode for NPC's in the
	'wait' schedule.  Fixes Fawn Trial infinite-loop bug.
	* actors.cc,intrinsics.cc: SI/SS goodies should work now (although I
	haven't tested the Blink Ring or Reagants Ring).

2001-07-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: BeOS: get exult path on startup

2001-07-24  Tristan Tarrant <nadir@users.sourceforge.net>
	* usecode/useval.h: add a cast to get_elem() to make it compile

2001-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/useval.cc (Usecode_value): Operator== compares array
	elems.
	* usecode/intrinsics.cc:  Intrinsic get_body_npc() added.

2001-07-22  Jeff Freedman  <jeff@amy.nerble.net>

	* Shape_chooser:  Added 'Search' widgets.
	* actors.cc: Call usecode for sleep arrow hit.
	* intrinsics.cc: click_on_item special case for weapon.
